--- a/lambdatimes/src/CSS/index.css
+++ b/lambdatimes/src/CSS/index.css
@@ -85,11 +85,11 @@ body {
   flex: 1;
   font-size: 11px;
 } */
-.top-bar .container .container-left span {
+/* .top-bar .container .container-left span {
   cursor: pointer;
   margin-right: 25%;
   font-weight: bold;
-}
+} */
 /* .top-bar .container .container-center {
   display: flex;
   justify-content: center;
@@ -98,7 +98,7 @@ body {
   flex: 3;
   font-size: 9px;
 } */
-.top-bar .container .container-center span {
+/* .top-bar .container .container-center span {
   cursor: pointer;
   margin-right: 5%;
 }
@@ -107,7 +107,7 @@ body {
 }
 .top-bar .container .container-center span:hover {
   text-decoration: underline;
-}
+} */
 /* .top-bar .container .container-right {
   display: flex;
   justify-content: flex-end;
@@ -117,10 +117,10 @@ body {
   font-size: 11px;
   font-weight: bold;
 } */
-.top-bar .container .container-right span {
+/* .top-bar .container .container-right span {
   cursor: pointer;
-}
-.header {
+} */
+/* .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -136,7 +136,7 @@ body {
   .header {
     width: 1280px;
   }
-}
+} */
 .header h1 {
   font-size: 60px;
   font-family: Didot, serif;
@@ -145,7 +145,7 @@ body {
   text-align: center;
   color: #000;
 }
-.header span {
+/* .header span {
   align-self: flex-end;
   font-size: 11px;
   font-weight: bold;
@@ -159,7 +159,7 @@ body {
   text-align: right;
   margin-right: 25px;
   flex: 1;
-}
+} */
 .content-container {
   display: flex; 
   flex-direction: column; 
